Fixes Catch Rate Estimator wrapping mice names to a new line

--- a/src/modules/catch-rate-estimate/styles.css
+++ b/src/modules/catch-rate-estimate/styles.css
@@ -39,4 +39,7 @@
 
 .mh-improved-cre-name {
   padding-left: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
